# PaperPilot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/agent-memory/backend-agent/: MEMORY.md  tag-feature-implementation.md
.claude/agent-memory/frontend-agent/: MEMORY.md  project-frontend-initialized.md  project-paper-detail-page.md
.claude/agents/: backend-agent.md  docs-writer.md  frontend-agent.md  research-agent.md
.claude/skills/api-design/: SKILL.md
.claude/skills/backend-design/: SKILL.md
.claude/skills/database/: SKILL.md
.claude/skills/pytest/: SKILL.md
.claude/skills/review-code/: SKILL.md
.claude/skills/security/: SKILL.md
.github/workflows/: ci.yml
backend/: .gitignore  Dockerfile  alembic.ini  main.py  requirements.txt
backend/.claude/agents/: code-research-analyst.md  python-backend-engineer.md
backend/alembic/: env.py
backend/alembic/versions/: 004223c29aea_initial_schema.py  (+5 more)
backend/app/: __init__.py
backend/tests/: conftest.py  test_ai_summary.py  test_auth.py  test_chat.py  test_papers.py  test_prompts.py  test_tags.py  test_users.py
docs/api/: README.md
docs/deployment/: README.md
docs/design/: COMPONENT_MAP.md  ER_DIAGRAM.md  README.md  architecture.md
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: auth.spec.ts  navigation.spec.ts  paper.spec.ts
frontend/src/: App.tsx  main.tsx
(+156 files in other folders)
